# sample-three-tier-app

./: .gitignore  README.md  deploy.py
backend/: .gitignore  Dockerfile  README.md  db.py  main.py  models.py  pyproject.toml
backend/migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_add_priority_field.sql
frontend/: Dockerfile
frontend/src/: App.css  App.tsx  index.css
infra/: ecs.tf  iam.tf  main.tf  security.tf  variables.tf
